# AntobotDevices

./: .gitignore  .gitmodules  README.md
antobot_devices_camera/: package.xml  setup.cfg  setup.py
antobot_devices_camera/launch/: cam_manager.launch
antobot_devices_camera/src/: antoRecClient.py  camera_manager.py
antobot_devices_camera_noetic/: CMakeLists.txt  package.xml
antobot_devices_camera_noetic/src/: antoRecClient.py  camera_manager.py  fake_zed.py
antobot_devices_gps/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
antobot_devices_gps/antobot_devices_gps/: gpsManager.py  gpsManager_old.py  gps_corrections.py  gps_corrections_old.py  gps_f9p.py  gps_filter_node.py  gps_movingbase.py  um982_gga.py
antobot_devices_gps/antobot_devices_gps/ublox_gps/: LICENCE  __init__.py  core.py  movingbase.py  ublox_gps.py
antobot_devices_gps/antobot_devices_gps/utils/: RenameSerialPort.sh  f9p_config.py  f9p_config_F9P_1.py  f9p_config_F9P_2.py  f9p_config_combined.py  f9p_config_new.py  field_survey.cpp
antobot_devices_gps/config/: corrections_config.yaml.save  corrections_config_example.yaml  mqtt_config.yaml  ppp_config.yaml  ppp_config_example.yaml
antobot_devices_gps/launch/: gps_config_launch.launch  gps_config_launch_china.launch  gps_f9p.launch.py  gps_f9p.launch_old.py
antobot_devices_gps/meshes/: GPS_UFO.dae
antobot_devices_gps/script/: enable_UART.service  enable_UART.sh
antobot_devices_gps/src/: .gps_f9p.py.swp  base_station_test.py  f9p_config.py  f9p_config_movingbase.py  f9p_gps.py  gpsManager.py  gps_base_station.py  gps_compare.py  gps_compare.txt  gps_corrections.py  gps_corrections_ntrip.py  gps_corrections_old.py  gps_f9p.py  gps_movingbase.py  gps_ppp.py  gps_rtk_mqtt.py  gps_strength_test.py  movingbase_enu_conversion.py  pointperfect_ntrip_client.py  set_gpio_high.py
antobot_devices_gps/src/antobot_devices_gps/: .ublox_gps.py.swp  movingbase.py  ublox_gps.py
antobot_devices_gps/src/old_scripts/: gps_base_station.py
antobot_devices_gps/src/utils/: f9p_config.py  f9p_config_movingbase.py  field_survey.cpp  gps_strength_test.py
antobot_devices_gps_noetic/: CMakeLists.txt  README.md  package.xml  setup.py
antobot_devices_gps_noetic/config/: mqtt_config_example.yaml
antobot_devices_gps_noetic/src/: gpsManager.py  gps_corrections.py  gps_f9p.py  gps_movingbase.py
antobot_devices_gps_noetic/src/old_scripts/: basic_gps.py  gpsManager_0.py  gps_base_station.py  gps_movingbase_0.py  gps_ppp.py  gps_rtk_mqtt.py  movingbase_enu_conversion.py
antobot_devices_gps_noetic/src/utils/: f9p_config.py
antobot_devices_imu/: CMakeLists.txt  README.md  package.xml
antobot_devices_imu/launch/: imu.launch.py  static_lidar_frame.launch  static_lidar_frame_two_lidars.launch
antobot_devices_imu/src/: _compare_imu_orientation.py  imuManager.py  imu_compensated.py  imu_euler.py  imu_euler_cpp.cpp  imu_kalman_filter.py  test.py
antobot_devices_imu_noetic/launch/: imu_euler.launch
antobot_devices_imu_noetic/src/: imu_euler.py
antobot_devices_india/: CMakeLists.txt  package.xml
antobot_devices_india/control_server/: CMakeLists.txt  package.xml  setup.py
antobot_devices_india/control_server/launch/: controller_localisation_client.launch
antobot_devices_india/control_server/src/: localisation_client.py
antobot_devices_india/control_server/src/control_server/: controller_client.py
antobot_devices_india/control_server/srv/: Config.srv  Ready.srv
antobot_devices_india/src/antobot_devices_india/: controller_client.py
antobot_devices_india/srv/: Restart.srv  Sleep.srv  Start.srv  Stop.srv
antobot_devices_joy/: CMakeLists.txt  package.xml  setup.cfg  setup.py
antobot_devices_joy/antobot_devices_joy/: joy_elrs_node.py  joy_sbus_4ws_node.py  joy_sbus_node.py  sbus_received.py
antobot_devices_joy/antobot_devices_joy/utils/: RenameSerialPort.sh
antobot_devices_joy/script/: renameSerialPort.sh
antobot_devices_joy/src/: joy_elrs_node.py
antobot_devices_lidar/: CMakeLists.txt  package.xml  setup.cfg  setup.py
antobot_devices_lidar/antobot_devices_lidar/: lidarManagerClient.py  lidar_manager.py
antobot_devices_lidar/config/: MID360_200_config.json  MID360_201_config.json  MID360_config.json  MID360_config_200.json  MID360_config_201.json  Multi_MID360_config.json  Multi_MID360_config_aRCU.json  aviaMsgConvert.yaml  lslidar_cx.yaml
antobot_devices_lidar/launch/: cx_launch.py  livoxMsgConvertToPointCloud2.launch.py  lslidar_config_launch.launch  lslidar_config_launch_updated.launch  mid360_common_launch.py  mid360_config_launch.launch  mid360_launch.py  multi_mid360_launch.py  test_mid360_launch.py
antobot_devices_lidar/scripts/: README.md  monitor.py
antobot_devices_lidar/src/: .lidar_manager.py.swp  aviaMsg2pointcloud2.cpp  lidar_manager.py
antobot_devices_lidar/src/antobot_devices_lidar/: lidarManagerClient.py
antobot_devices_lidar_noetic/: package.xml
antobot_devices_lidar_noetic/src/: C16_pointcloud_to_laserscan.cpp  lidar_manager.py
antobot_devices_msgs/: CMakeLists.txt  README.md  package.xml
antobot_devices_msgs/msg/: GpsHeading.msg  GpsQual.msg  gpsQual.msg
antobot_devices_msgs/srv/: AntoRec.srv  CamManager.srv  LidarManager.srv  ProgressUpdate.srv  costmapToggleObservation.srv  lidarManager.srv  progressUpdate.srv
