<?xml version="1.0"?>
<package format="2">
  <name>antobot_devices_gps</name>
  <version>0.0.0</version>
  <description>The antobot_devices_gps package</description>

  <maintainer email="zhuang.zhou@antobot.ai">Zhuang Zhou</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
