<?xml version="1.0"?>
<package format="2">
  <name>antobot_devices_imu</name>
  <version>0.0.0</version>
  <description>The antobot_manager_devices package</description>
  <maintainer email="zhuang.zhou@antobot.ai">Zhuang Zhou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geonav_transform</depend>
  <depend>antobot_manager_software</depend>
  <depend>std_msgs</depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
